kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zar-brez-utvar
spec:
  selector:
    app: zar-brez-utvar
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
