kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zar-brez-utvar
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - zar-brez-utvar.djnd.si
        - zar-brez-utvar.danesjenovdan.si
      secretName: zar-brez-utvar-tls
  rules:
    - host: zar-brez-utvar.djnd.si
      http: &http_paths
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zar-brez-utvar
                port:
                  number: 80
    - host: zar-brez-utvar.danesjenovdan.si
      http: *http_paths
